Added descriptive AlpineBits text

--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,7 @@
             <a class="infobox mt-2 mb-2" href="https://www.alpinebits.org/alliance/">
                 <div class="icon tbd"></div>
                 <h2>The Alliance</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>The AlpineBits Alliance is the organization defining the AlpineBits standard. It's members are various companies in the tourism sector, collaborating for for a common and open interface standard.</p>
             </a>
         </div>
 
@@ -37,10 +34,7 @@
             <a class="infobox mt-2 mb-2" href="https://www.alpinebits.org/developers/">
                 <div class="icon tbd"></div>
                 <h2>The Docs</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>AlpineBits Hotel Data is subset of the OTA standard, defining how to use actions, attributes and messages, specially tailored for the needs of the alpine tourism (but not limited). It's documentation is freely available as PDF together with the according examples in a zip file.</p>
             </a>
         </div>
 
@@ -48,10 +42,7 @@
             <a class="infobox mt-2 mb-2" href="https://opendatahub.bz.it/">
                 <div class="icon tbd"></div>
                 <h2>Open Data Hub</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>The Open Data Hub is a project of the Open Data Hub Team at the NOI Techpark, Bolzano/Bozen, Italy. All it's data is available as open data. In addition to the REST APIs the Open Data Hub has an <b>AlpineBits Hotel Data Server</b> Interface to publish accomodation related data.</p>
             </a>
         </div>
 
