frontend: use scripts.opendatahub.com for cookieconsent

--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,17 @@
     <meta charset="utf-8">
     <title>Welcome to the AlpineBits Interface</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="cookieconsent/cookieconsent.css">
+    <link rel="stylesheet" href="https://scripts.opendatahub.testingmachine.eu/cookieconsent/cookieconsent.css">
+    <script defer src="https://scripts.opendatahub.testingmachine.eu/cookieconsent/cookieconsent.js"></script>
+    <script defer src="https://scripts.opendatahub.testingmachine.eu/cookieconsent/cookieconsent-init.js"></script>
+
     <!-- Matomo -->
     <script type="text/plain" data-cookiecategory="targeting">
-        var _paq = window._paq = window._paq || [];
-        /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-        _paq.push(['trackPageView']);
-        _paq.push(['enableLinkTracking']);
-        (function() {
-            var u="https://digital.matomo.cloud/";
-            _paq.push(['setTrackerUrl', u+'matomo.php']);
-            _paq.push(['setSiteId', '17']);
-            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-            g.async=true; g.src='//cdn.matomo.cloud/digital.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
-        })();
+        var _paq = window._paq = window._paq || []; /* tracker methods like "setCustomDimension" should be called before "trackPageView" */ _paq.push(['trackPageView']); _paq.push(['enableLinkTracking']); (function() { var u="https://digital.matomo.cloud/"; _paq.push(['setTrackerUrl',
+        u+'matomo.php']); _paq.push(['setSiteId', '17']); var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.async=true; g.src='//cdn.matomo.cloud/digital.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s); })();
     </script>
     <!-- End Matomo Code -->
 </head>
@@ -33,8 +26,8 @@
 
         <div class="col-md-12 text-center mb-4">
             <h1 class="mb-4">Welcome to the AlpineBits Interface</h1>
-            <p>AlpineBits is an interface specification for exchanging touristic data, developed by <a href="#"><i>the AlpineBits Alliance</i></a>.
-               This is a machine readable end node, which is not intended for human usage. Please refer to the following links to consume this end node.
+            <p>AlpineBits is an interface specification for exchanging touristic data, developed by <a href="#"><i>the AlpineBits Alliance</i></a>. This is a machine readable end node, which is not intended for human usage. Please refer to the following
+                links to consume this end node.
             </p>
         </div>
 
@@ -50,7 +43,8 @@
             <a class="infobox mt-2 mb-2" href="https://www.alpinebits.org/developers/">
                 <div class="icon tbd"></div>
                 <h2>The Docs</h2>
-                <p>AlpineBits Hotel Data is subset of the OTA standard, defining how to use actions, attributes and messages, specially tailored for the needs of the alpine tourism (but not limited). It's documentation is freely available as PDF together with the according examples in a zip file.</p>
+                <p>AlpineBits Hotel Data is subset of the OTA standard, defining how to use actions, attributes and messages, specially tailored for the needs of the alpine tourism (but not limited). It's documentation is freely available as PDF together
+                    with the according examples in a zip file.</p>
             </a>
         </div>
 
@@ -58,7 +52,8 @@
             <a class="infobox mt-2 mb-2" href="https://opendatahub.bz.it/">
                 <div class="icon tbd"></div>
                 <h2>Open Data Hub</h2>
-                <p>The Open Data Hub is a project of the Open Data Hub Team at the NOI Techpark, Bolzano/Bozen, Italy. All it's data is available as open data. In addition to the REST APIs the Open Data Hub has an <b>AlpineBits Hotel Data Server</b> Interface to publish accomodation related data.</p>
+                <p>The Open Data Hub is a project of the Open Data Hub Team at the NOI Techpark, Bolzano/Bozen, Italy. All it's data is available as open data. In addition to the REST APIs the Open Data Hub has an <b>AlpineBits Hotel Data Server</b> Interface
+                    to publish accomodation related data.</p>
             </a>
         </div>
 
@@ -71,8 +66,6 @@
         Additional/Legal Information
     </div>
 
-    <script defer src="cookieconsent/cookieconsent.js"></script>
-    <script defer src="cookieconsent/cookieconsent-init.js"></script>
 </body>
 
 </html>
