removed .bz.it and added .com

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
         </div>
 
         <div class="col-md-4">
-            <a class="infobox mt-2 mb-2" href="https://opendatahub.bz.it/">
+            <a class="infobox mt-2 mb-2" href="https://opendatahub.com/">
                 <div class="icon tbd"></div>
                 <h2>Open Data Hub</h2>
                 <p>The Open Data Hub is a project of the Open Data Hub Team at the NOI Techpark, Bolzano/Bozen, Italy. All it's data is available as open data. In addition to the REST APIs the Open Data Hub has an <b>AlpineBits Hotel Data Server</b> Interface
@@ -64,7 +64,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
         </div>
 
         <div class="col-md-12 text-center mt-4">
-            <p><a href="mailto:info@opendatahub.bz.it" class="btn btn-outline-primary">Get In Touch</a></p>
+            <p><a href="mailto:info@opendatahub.com" class="btn btn-outline-primary">Get In Touch</a></p>
         </div>
     </div>
 
